Fixed dropdown icon alignment for ActivityFeedList

--- a/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/ActivityFeedList/ActivityFeedList.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/ActivityFeed/ActivityFeedList/ActivityFeedList.less
@@ -21,7 +21,6 @@
 
   .dropdown-icon {
     fill: @primary-color;
-    margin-top: 8px;
   }
 
   .filters-container {
