--- a/openmetadata-ui/src/main/resources/ui/src/styles/spacing.less
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/spacing.less
@@ -42,6 +42,10 @@
   margin-right: @margin-xs;
   margin-left: @margin-xs;
 }
+.m-x-xss {
+  margin-right: @margin-xss;
+  margin-left: @margin-xss;
+}
 .m-x-sm {
   margin-right: @margin-sm;
   margin-left: @margin-sm;
